<resources>
    <string name="app_name">Lab4</string>
    <string name="action_settings">Settings</string>
    <string name="tipCalc">Tip</string>
    <string name="distCalc">Distance</string>
    <string name="tempCalc">Temperature</string>
    <string name="title_activity_tip_calc">tipCalc</string>
    <string name="title_activity_distconv">distconv</string>
    <string name="title_activity_fahrenheittocelcius">fahrenheittocelcius</string>
    <string name="title_activity_tip">tip</string>
    <string name="mi">mi:</string>
    <string name="convert">Convert</string>
    <string name="km">km:</string>
</resources>
