<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.constraint.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="77dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="677dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="46dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="369dp" />

    <Button
        android:id="@+id/tipCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipCalc"
        app:layout_constraintBottom_toTopOf="@+id/distCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="tipClick"/>

    <Button
        android:id="@+id/distCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distCalc"
        app:layout_constraintBottom_toTopOf="@+id/tempCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipCalc"
        android:onClick="distClick"/>

    <Button
        android:id="@+id/tempCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distCalc"
        android:onClick="tempClick"/>
</android.support.constraint.ConstraintLayout>